tests/reference/asr-bindc_02-bc1a7ea.stderr
semantic error: 'i16[3]' object does not support item assignment
  --> tests/../integration_tests/bindc_02.py:12:5
   |
12 |     y[0] = i16(1)
   |     ^^^^^^^^^^^^^ 
